--- a/opmaak.css
+++ b/opmaak.css
@@ -4,6 +4,7 @@ body {
   padding: 5px 25px;
   font-size: 18px;
   margin: 0;
+  color: #878787;
 }
 
 h1{
@@ -20,9 +21,9 @@ h3{
 
 h1, h2, h3{
   border: 3px solid;
-  border-color: white;
+  border-color:  #878787;
   border-radius: 20px;
-  background-color: #878787;
+  background-color: black;
   font-family: "Merriweather", serif;
   text-align: center;
 }
