--- a/opmaak.css
+++ b/opmaak.css
@@ -1,5 +1,8 @@
 body {
-  background-color: black;
+  background: url("https://static1.squarespace.com/static/565f34f5e4b06736c02fdda6/565f4a0de4b0b002ffd17cb0/57bd64c7f7e0ab7f80485c85/1472030153722/trust_1.gif");
+
+
+
   font-family: "Open Sans", times new roman;
   padding: 5px 25px;
   font-size: 18px;
