--- a/opmaak.css
+++ b/opmaak.css
@@ -40,3 +40,28 @@ p {
 img{
   border:4px outset #7d7d7d ;
 }
+
+
+
+
+
+ul {
+  background: #080808;
+  padding: 10px;
+}
+
+ul li {
+  background: #787878;
+  padding: 5px;
+  border: solid 2px white;
+  display: inline-block;
+}
+
+ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  color: #C0C0C0;
+}
