--- a/opmaak.css
+++ b/opmaak.css
@@ -1,13 +1,22 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   background: url("https://static1.squarespace.com/static/565f34f5e4b06736c02fdda6/565f4a0de4b0b002ffd17cb0/57bd64c7f7e0ab7f80485c85/1472030153722/trust_1.gif");
 
 
 
   font-family: "Open Sans", times new roman;
-  padding: 5px 25px;
+  /* padding: 5px 25px; */
   font-size: 18px;
   margin: 0;
   color: #878787;
+}
+
+header {
+  text-align: center;
 }
 
 h1{
@@ -38,30 +47,69 @@ p {
 }
 
 img{
-  border:4px outset #7d7d7d ;
+  border:4px outset #7d7d7d;
+  margin: auto;
 }
 
 
 
+nav{
+  width: 100%;
+  position: sticky;
+  top:0;
+}
 
+.badges{
+  /* margin-left: 60%; */
+  float: right;
+}
+
+#badges{
+  /* margin-left: 60%; */
+  float: left;
+  margin: 10px;
+}
+
+
+section article {
+  border: 3px solid black;
+  border-radius: 0px 20px 20px 20px;
+  margin: 5px 10px 5px 10px;
+  padding: 10px;
+  background: white;
+}
+
+
+
+.wrapper {
+  margin: 0 auto 0 auto;
+  width: 85%;
+}
 
 ul {
-  background: #080808;
-  padding: 10px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-ul li {
-  background: #787878;
-  padding: 5px;
-  border: solid 2px white;
-  display: inline-block;
+li {
+    float: left;
 }
 
-ul li a {
-  color: white;
-  text-decoration: none;
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
-ul li a:hover {
-  color: #C0C0C0;
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
 }
